...
                  ),
                ),
              ),
              const SizedBox(height: 24),
              // App Name
              Text(
                'University of Makati',
                textAlign: TextAlign.center,
                style: GoogleFonts.lexend(
                  fontWeight: FontWeight.bold,
                  fontSize: 24,
                  color: const Color(0xff0a192f),
                  letterSpacing: -0.6,
...
