...
      'settings': 'Mga Setting',
      'appearance': 'ANYO',
      'theme': 'Tema',
      'light': 'Maliwanag',
      'dark': 'Madilim',
      'general': 'PAKALAHATAN',
      'language': 'Wika',
      'downloads': 'MGA DOWNLOAD',
      'wifi_only': 'I-download sa Wi-Fi lamang',
      'auto_update': 'Awtomatikong i-update',
      'notifications_title': 'MGA NOTIPIKASYON',
      'allow_notifications': 'Payagan ang mga Notipikasyon',
      'storage': 'IMBAKAN',
...
